# nb4mna

./: .gitignore  .python-version  .safety-project.ini  Containerfile  Dockerfile  LICENSE  docker-compose.yaml  nb4mna.container  nb4mna.socket  noxfile.py  pyproject.toml
src/nb4mna/: __init__.py  caching.py  logging.py  settings.py
src/nb4mna/api/: nightbot.py  tatsumaki.py  urbandictionary.py
src/nb4mna/modules/fight/: __init__.py  phrases.yaml  settings.py
src/nb4mna/modules/urban/: __init__.py
