[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'nb4mna'
version = '0.1.1'
description = 'Custom Nightbot APIs for MedicNinjaa'
authors = ['Foster Snowhill <Forst@users.noreply.github.com>']
license = 'MIT'
repository = 'https://github.com/Forst/nb4mna'

[tool.poetry.dependencies]
python = '^3.12'
fastapi = "^0.116.1"
httpx = {extras = ["http2"], version = "^0.28.1"}
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
asgi-correlation-id = "^4.3.4"
PyYAML = "^6.0.2"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
nox = "^2025.5.1"
nox-poetry = "^1.2.0"
flake8-black = "^0.3.6"
flake8-import-order = "^0.19.2"
flake8-bugbear = "^24.12.12"
flake8-bandit = "^4.1.1"
safety = "^3.6.1"
mypy = "^1.17.1"
types-pyyaml = "^6.0.12.20250822"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
skip-string-normalization = true

[tool.flake8]
count = 'yes'
statistics = 'yes'
max-line-length = 120
import-order-style = 'google'
#select = 'BLK,B,B9,C,E,F,W,I,S'
select = 'B,B9,C,E,F,W,I,S'
# Ignores:
# * B950 - using strict line length limitation
# * S311 - project doesn't do any cryptography to require secure randomness
ignore = 'B950,S311'
# Per-file ignores:
# * src/nb4mna/__init__.py: imports logging first to catch all log messages
per-file-ignores = 'src/nb4mna/__init__.py:E402,I100'

[tool.mypy]
strict = true
plugins = "pydantic.mypy"
