[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'nb4mna'
version = '0.1.1'
description = 'Custom Nightbot APIs for MedicNinjaa'
authors = ['Foster Snowhill <Forst@users.noreply.github.com>']
license = 'MIT'
repository = 'https://github.com/Forst/nb4mna'

[tool.poetry.dependencies]
python = '^3.12'
fastapi = "^0.135.1"
httpx = {extras = ["http2"], version = "^0.28.1"}
uvicorn = "^0.42.0"
python-dotenv = "^1.2.2"
asgi-correlation-id = "^4.3.4"
PyYAML = "^6.0.3"
pydantic-settings = "^2.13.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.4"
black = "^26.3.1"
nox = "^2026.2.9"
nox-poetry = "^1.2.0"
flake8-black = "^0.4.0"
flake8-import-order = "^0.19.2"
flake8-bugbear = "^25.11.29"
flake8-bandit = "^4.1.1"
safety = "^3.7.0"
mypy = "^1.19.1"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
skip-string-normalization = true

[tool.flake8]
count = 'yes'
statistics = 'yes'
max-line-length = 120
import-order-style = 'google'
#select = 'BLK,B,B9,C,E,F,W,I,S'
select = 'B,B9,C,E,F,W,I,S'
# Ignores:
# * B950 - using strict line length limitation
# * S311 - project doesn't do any cryptography to require secure randomness
ignore = 'B950,S311'
# Per-file ignores:
# * src/nb4mna/__init__.py: imports logging first to catch all log messages
per-file-ignores = 'src/nb4mna/__init__.py:E402,I100'

[tool.mypy]
strict = true
plugins = "pydantic.mypy"
